CSS tweaks to fix z-index on pagination and scroll to top buttons | Added overlay to locations.html header so navbar is more visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ button.to-top {
     position: fixed;
     right: 25px;
     bottom: 25px;
-    z-index: 4;
+    z-index: 2;
     font-size: 24px;
     background-color: #f8554a;
     color: #fff;
@@ -408,12 +408,17 @@ color: #fff;
     position: relative;
 }
 
-.homepage-overlay {
+.homepage-overlay, .location-pg-overlay  {
     width: 100%;
     height: 100%;
     background: linear-gradient(180deg, #001631a6 45%, rgb(94 121 255 / 0%) 100%);
     position: relative;
     z-index: -1;
+}
+
+.location-pg-overlay {
+    z-index: 0;
+    background: linear-gradient(180deg, #001631a6 5%, rgb(94 121 255 / 0%) 65%);
 }
 
 /* Searchbar */
